--- a/_posts/2020-02-17-블로그-제작법.md
+++ b/_posts/2020-02-17-블로그-제작법.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "MarkDown 관련 정리"
+title: "포트폴리오 제작 노하우"
 description:
 headline:
 modified: 2020-02-17
 category: webdevelopment
-tags: [markdown]
+tags: [portfolio]
 imagefeature:
 mathjax:
 chart:
@@ -14,158 +14,80 @@ comments: true
 featured: true
 ---
 
-# MarkDown 정리
+# Portfolio 제작 노하우
 
-## 마크다운이란?
+## 1. Presentable Design/UI
 
-Markdown은 텍스트 기반의 마크업언어로 2004년 존그루버에 의해 만들어졌으며 쉽게 쓰고 읽을 수 있으며 HTML로 변환이 가능하다. 특수기호와 문자를 이용한 매우 간단한 구조의 문법을 사용하여 웹에서도 보다 빠르게 컨텐츠를 작성하고 보다 직관적으로 인식할 수 있다. 마크다운이 최근 각광받기 시작한 이유는 깃헙(https://github.com) 덕분이다. 깃헙의 저장소Repository에 관한 정보를 기록하는 README.md는 깃헙을 사용하는 사람이라면 누구나 가장 먼저 접하게 되는 마크다운 문서였다. 마크다운을 통해서 설치방법, 소스코드 설명, 이슈 등을 간단하게 기록하고 가독성을 높일 수 있다는 강점이 부각되면서 점점 여러 곳으로 퍼져가게 된다.
+디자인에 신경을 많이 써라.
+포트폴리오에 당신이 개발한 웹사이트를 나열하게 될텐데, 당연하게도 평가자가 가장 먼저 보게되는 화면이며, 당신의 포트폴리오 자체도 당신의 프로젝트이기 때문에 가장 중요하다.
+그 자리에서 바로 보여줄 수 있고 즉시 설명 가능한 디자인과 UI로 만들어라.
+당신이 UI디자이너가 아니라 프론트엔드 개발자나 백엔드 개발자라면, 혹은 당신의 디자인 스킬이 끔찍하다면, 바닥부터 모두 디자인할 필요는 없다. 이미 잘 만들어진 템플릿들을 잘 활용하는 것도 능력이다.
 
-## 마크다운의 장-단점
+## 2. Good Hosting & Domain
 
-### 장점
+@@.herokuapp.com 같은 무료 서브도메인 쓰지 말아라. 비싸지 않고 어렵지 않으니 반드시 커스텀 도메인을 구매해서 연결해라.
+반드시 https(SSL)를 지원해라. Chrome은 https를 지원하지 않으면 경고를 띄우기 때문에 UX가 좋지 않다.
+기본적인 것들이라 이런 것들을 하지 않으면 평가자에게 꼼꼼하지 못하다거나 사소한 것을 신경쓰지 않는다는 느낌을 줄 수도 있다.
 
-```
-1. 간결하다.
-2. 별도의 도구없이 작성가능하다.
-3. 다양한 형태로 변환이 가능하다.
-3. 텍스트(Text)로 저장되기 때문에 용량이 적어 보관이 용이하다.
-4. 텍스트파일이기 때문에 버전관리시스템을 이용하여 변경이력을 관리할 수 있다.
-5. 지원하는 프로그램과 플랫폼이 다양하다.
-```
+## 3. Keep it simple
 
-### 단점
+가장 중요한 몇 개의 프로젝트만 넣고 불필요한 것은 모두 빼고 최소화해라. 가능한한 글도 최대한 짧게 써라.
+프로젝트는 항상 가장 중요한 것들을 맨 위에 써라. 너무 길면 읽지 않는다. 너무 많아도 보기 귀찮고 어렵다. 자기소개만 10줄이면 아무도 읽지 않을 것이다. 최대한 짧고 심플하게 유지해라.
+큰 회사들의 랜딩페이지를 참고해봐라. 10-15페이지의 구구절절한 페이지들보다 하나의 깔끔하고 간결한 싱글 랜딩페이지가 더 매력적이다.
 
-```
-1. 표준이 없다.
-2. 표준이 없기 때문에 도구에 따라서 변환방식이나 생성물이 다르다.
-3. 모든 HTML 마크업을 대신하지 못한다.
-```
+## 4. Don't exaggerate skills
 
-jekyll기반 블로그에서 고려할 마크다운은 kramdown이다.  
-그 이유는 Github page에서는 작년 5월부터 kramdown만 지원하기 때문이다. [\^myfootnote]
+당신의 스킬셋을 과장하지말아라. 거짓말하지말아라. 솔직해져라.
+루비 온 레일즈 튜토리얼을 따라해봤다고 당신이 루비 개발자가 되지 않는다.
+사용해본 모든 언어와 모든 프레임워크를 나열하지 말아라. 평가자는 멍청하지 않다.
+모든 분야를 조금씩 두루 아는 것보다 몇 가지에 전문적인 것이 훨씬 좋다.
 
-## 머리말 (Header)
+## 5. Live Examples/Demos
 
-```
-  * # H1 입니다.
+바로 라이브 프로젝트를 볼 수 있는 버튼을 만들어서 직접 들어가볼 수 있도록 해라.
+해당 프로젝트를 깃허브에 올려놓고 코드도 즉시 볼 수 있도록 링크버튼을 만들어라.
+화면이 없는 프로젝트(CLI툴, 라이브러리 등)는 예외다. 깃허브에 코드만 올려놓아도 된다. 대신 README는 잘적자.
+절대 프로젝트의 이미지만 덩그러니 넣지 말아라. 그런건 아무나 할 수 있다.
+이 경우 프로덕션 프로젝트가 아니라면, 커스텀 도메인이나 https지원 등은 하지않아도 상관없다.
 
-  * ## H2 입니다.
+## 6. Be Selective of Projects
 
-  * ### H3 입니다.
+많은 사이드프로젝트를 했더라도 투두리스트같은 당신이 한 모든 프로젝트를 나열하지 말아라.
+3~6개의 최고 프로젝트만 선택해서 넣어라. 2개의 퀄리티있고 큰 프로젝트가 10개의 투두리스트보다 훨씬 우수하다.
+즉, 양보단 질이다.
 
-  * #### H4 입니다.
+## 7. Customize Course Projects
 
-  * ##### H5 입니다.
+강의나 튜토리얼을 따라해서 프로젝트를 했다면 절대 그대로 넣지말아라. 반드시 자신 나름대로 커스터마이징 해라.
+유명한 튜토리얼들은 이미 모든 사람들이 알고있어서 평가자는 이미 똑같은 결과물을 많이 보았을 것이다.
 
-  * ###### H6 입니다.
-```
+## 8. Easy Contact
 
-## 수평선 (Horizon)
+인사담당자가 당신에게 연락하기 쉽게하라.
+이메일, 핸드폰번호 같은 연락처를 Navigation bar, About page, Contact section 등 잘보이는 곳에 써 놓아라.
 
-```
-***
-```
+## 9. Web Presence & Brand
 
-## 개행(New line)
+자신을 브랜딩할 수 있는 수단을 넣어라.
+유튜브를 한다면 유튜브 채널, 글을 쓴다면 블로그 주소나 미디엄 주소, 깃허브 주소, SNS주소 등
+본인 사진이든 로고든, 여러 다른 플랫폼에 비슷하거나 같은 프로필 이미지를 사용해라. 그게 싫다면 primary color라도 일관되게 하라.
 
-```
-문장끝에 공백2칸+Enter
-```
+## 10. Be Yourself
 
-## 인용구 (BlockQuote)
+가장 똑똑한 사람이 되려고하지 말아라. 똑똑해보이려고 애쓰지 말아라.
+그냥 솔직하게 자신을 표현해라.
+당신의 열정, 취미, 특기 등 당신을 표현할 수 있는 다른 것들을 넣어도 좋지만, Keep it Simple!
 
-```
-> 인용구입니다.
+//
 
->> 인용구안에 인용구를 사용할 수 있습니다.
-```
+보통 신입한테는 어마어마한 기술적 소양을 물어보기보다는 다루는 기술의 기본을 충실히 알고 있는지 확인하는 경우가 많다. 따라서 면접을 앞두고 있다면 지금까지 본인이 잘 안다고 생각했던 것들을 정말 제대로 알고 있는지 확인해보는 게 중요하다.
 
-## 목록 (List)
+점검할 수 있는 가장 쉬운 방법으로는 다른 사람에게 설명해보고 그 사람이 이해했는지 점검해보는 게 있다. 대상은 이왕이면 해당 분야에 대해 지식이 없는 사람이면 좋겠지만, 꼭 사람이 아니어도 좋다. 인형을 붙잡고 해도 좋으니 그저 처음부터 끝까지 잘 설명할 수 있는지 스스로 확인해보자. 설명하다 보면 자신의 이해도에 대해 되돌아볼 수 있다. 실제로 이와 비슷한 고무 오리 디버깅이라는 방법이 있다(한국어 자료).
 
-```
-* 순서가 없는 리스트입니다.
-  * 리스트1
-  * 리스트2
-  * 리스트3
-
-* 순서가 있는 리스트입니다.
-  1. 리스트1
-  2. 리스트2
-  3. 리스트3
-
-* 상위 리스트1
-  * 하위 리스트1
-  * 하위 리스트2
-    * 하위의 하위 리스트1
-    * 하위의 하위 리스트2
-
-* 리스트('*')
-+ 리스트('+')
-- 리스트('-')
-```
-
-## 코드 (Code)
-
-```
-* 문장속 코드 `example code inline` 삽입 예시입니다.
-
-* 박스형 코드 삽입예시입니다.
- '''
- '''
-
-```
-
-## 링크
-
-```
-* <https://www.github.com>
-* [Github](https://www.github.com)
-```
-
-## 강조
-
-```
-* 강조 문법 **강조된 부분** 예시입니다.
-_이탤릭_ , *이탤릭*
-__볼드__ **볼드**
-___이탤릭볼드___
-***이탤릭볼드***
-**이렇게 _할수도_**
-~~취소선~~
-```
-
-## 이미지
-
-```
-![예시 이미지](https://raw.githubusercontent.com/ByungJun25/Wiki/master/Markdown/example_image.jpg)
-```
-
-## TABLE
-
-```
-1 | 2 | 3
---- | --- | ---
-표 쓸때는 | 중간 두번째줄에 | `---` 이거 필요합니다.
-```
-
-## 마크다운 포맷 무시하기
-
-_이건데_ .. \*이렇게\*
-
-```
-*이건데* .. \*이렇게\*
-```
-
-## Emoji
-
-&#128525;
-
-```
-&#128525;
-```
-
-\*더많은 이모티콘 https://steemit.com/steemkr-guide/@snow-airline/steemkr-quick-start-guide
-
-## 배지(badge) 만들기
-
-<https://shields.io>
+포트폴리오
+가능하면 GitHub이나 BitBucket 같은 Git 호스팅 서비스에 올려두자.
+요즘은 SVN이든 Git이든 VCS를 사용하지 않는 업체를 찾기 어려울 정도이다. 혹시 VCS를 전혀 사용하지 않는 개발 업체가 있다면 입사를 다시 한번 고민해보라고 진지하게 말하고 싶다. 입사 지원자에게 GitHub 계정 링크를 알려달라는 곳이 해외는 물론 국내에도 꽤 있다. 가능하면 포트폴리오를 앞서 말한 두 서비스 중 하나를 택해서 올려두는 게 좋다. 개인적으로는 GitHub을 추천하는데, 사용자가 더 많아서 문제가 생겼을 때 도움을 구하기 쉽기 때문이다.
+.gitignore 파일에 .idea 폴더나 npm-debug.log 같은 불필요한 파일은 포함되지 않게 설정해두자. 코딩 능력과 상관없는 거지만 기본적인 사용법을 모르는 것처럼 보일 수 있다.
+커밋 메시지는 의외로 많은 것을 말해준다. 신경 써서 좋은 커밋 메시지를 작성하는 게 좋다.
+혹여 포트폴리오 소개서를 쓴다면 사용한 기술은 나열은 하되 강조하지는 않는 걸 추천한다. 신입에게는 대단한 기술 스택일지 몰라도 (아마) 면접관들에게는 그리 대단하지 않을 공산이 큰데, 그런 걸 강조하면 오히려 더 없어 보이기 때문. 반면 만에 하나라도 면접관의 관심을 끌 만한 기술이라면 굳이 강조하지 않아도 눈에 띌 것이다.
+개인 프로젝트라 하더라도 테스트 케이스는 성의껏 작성해두자. 코딩 전에 하든 후에 하든, 어쨌든 작성해 두는 게 좋은 인상을 줄 수 있다.
