--- a/_posts/2020-02-17-JS_ex01_색상바꾸기.md
+++ b/_posts/2020-02-17-JS_ex01_색상바꾸기.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "나는 어떻게 개발 공부를 했나"
+title: "JS_EX01_색상바꾸기"
 description:
 headline:
 modified: 2020-02-17
 category: webdevelopment
-tags: [lecture]
+tags: [JS]
 imagefeature:
 mathjax:
 chart:
