--- a/_posts/2020-02-17-JS_ex01_색상바꾸기.md
+++ b/_posts/2020-02-17-JS_ex01_색상바꾸기.md
@@ -5,7 +5,7 @@ description:
 headline:
 modified: 2020-02-17
 category: webdevelopment
-tags: [JS]
+tags: [JS_example]
 imagefeature:
 mathjax:
 chart:
@@ -13,7 +13,6 @@ share: true
 comments: true
 featured: true
 ---
-
 
 <div class="code">
 <script async src="//jsfiddle.net/lsh58/9ztmj0cq/1/embed/js,html,css,result/dark/"></script>
