--- a/_posts/2020-02-17-JS_ex04_Top.md
+++ b/_posts/2020-02-17-JS_ex04_Top.md
@@ -5,7 +5,7 @@ description:
 headline:
 modified: 2020-02-17
 category: webdevelopment
-tags: [JS]
+tags: [JS_example]
 imagefeature:
 mathjax:
 chart:
