--- a/_posts/2020-02-17-JS_ex01_색상바꾸기.md
+++ b/_posts/2020-02-17-JS_ex01_색상바꾸기.md
@@ -4,7 +4,7 @@ title: "JS_EX01_색상바꾸기"
 description:
 headline:
 modified: 2020-02-17
-category: webdevelopment
+category: example
 tags: [JS_example]
 imagefeature:
 mathjax:
