--- a/_posts/2020-02-17-JS_ex02_끝말잇기.md
+++ b/_posts/2020-02-17-JS_ex02_끝말잇기.md
@@ -4,7 +4,7 @@ title: "JS_EX02_끝말잇기"
 description:
 headline:
 modified: 2020-02-17
-category: webdevelopment
+category: example
 tags: [JS_example]
 imagefeature:
 mathjax:
@@ -13,7 +13,6 @@ share: true
 comments: true
 featured: true
 ---
-
 
 <div class="code">
 <script async src="//jsfiddle.net/lsh58/9ztmj0cq/3/embed/js,html,css,result/dark/"></script>
