--- a/_posts/2020-02-17-JS_ex03_슬라이드.md
+++ b/_posts/2020-02-17-JS_ex03_슬라이드.md
@@ -4,7 +4,7 @@ title: "JS_EX03_슬라이드"
 description:
 headline:
 modified: 2020-02-17
-category: webdevelopment
+category: example
 tags: [JS_example]
 imagefeature:
 mathjax:
@@ -14,22 +14,21 @@ comments: true
 featured: true
 ---
 
-
 <div class="code">
 <script async src="//jsfiddle.net/lsh58/9ztmj0cq/16/embed/js,html,css,result/dark/"></script>
 </div>
 
-*JSfiddle 의 한계상 이미지는 들어가지 못했다.*
+_JSfiddle 의 한계상 이미지는 들어가지 못했다._
 
 ## 중요 포인트
 
-### preventDefault();  
+### preventDefault();
+
 기존에 있던 이벤트들 실행방지
 ex) e.preventDefault();
 
 ### offsetWidth, offsetHeight
+
 일반적으로 엘리먼트의 전체 크기를 알고 싶다면, `offsetWidth`와 `offsetHeight` 속성을 가져오면 된다.
 이 속성은 엘리먼트의 패딩과 보더, 스크롤바의 사이즈를 포함한 값을 리턴한다.
 ex) topHeight = slides[0].offsetHeight;
-
-
