--- a/_posts/2020-02-17-JS_ex04_Top.md
+++ b/_posts/2020-02-17-JS_ex04_Top.md
@@ -4,7 +4,7 @@ title: "JS_EX04_Top"
 description:
 headline:
 modified: 2020-02-17
-category: webdevelopment
+category: example
 tags: [JS_example]
 imagefeature:
 mathjax:
@@ -14,7 +14,6 @@ comments: true
 featured: true
 ---
 
-
 <div class="code">
 <script async src="//jsfiddle.net/lsh58/9ztmj0cq/19/embed/js,html,css,result/dark/"></script>
 </div>
@@ -23,24 +22,28 @@ featured: true
 ## 중요 포인트
 
 ### Math.max(a,b)
+
 a와 b의 값 중 큰 값을 출력한다
 
 ### document.documentElement
+
 document의 Element
 ex) var docElem = document.documentElement
 
 ###  Element.className, Element.classList.add
+
 className은 class 전체를 “#”으로 변경
 classList.add는 class가 존재할 때 “#”을 추가
 
 ### scrollInterval(할일,시간)
+
 Number(ms)마다 할 일을 실행
-ex) scrollInterval = setInterval(function() {할 일}, number) 
+ex) scrollInterval = setInterval(function() {할 일}, number)
+
 ### clearInterval(할일)
+
 변수 안에 있는 할 일을 중지
 
-### window.scrollBy(x,-50) 
+### window.scrollBy(x,-50)
+
 윈도우 스크롤의 x축을 x만큼, y축을 y만큼 움직인다
-
-
-
