--- a/_posts/2020-02-17-JS_ex05_Typing.md
+++ b/_posts/2020-02-17-JS_ex05_Typing.md
@@ -4,7 +4,7 @@ title: "JS_EX05_Typing"
 description:
 headline:
 modified: 2020-02-17
-category: webdevelopment
+category: example
 tags: [JS_example]
 imagefeature:
 mathjax:
@@ -14,28 +14,26 @@ comments: true
 featured: true
 ---
 
-
 <div class="code">
 <script async src="//jsfiddle.net/lsh58/9ztmj0cq/23/embed/js,html,css,result/dark/"></script>
 </div>
-
 
 ## 중요 포인트
 
 ![image](https://github.com/lsh58/lsh58.github.io/blob/master/images/ex05_typing.PNG?raw=true)
 
 ### charAt
+
 문자추출
 
 ### slice
+
 배열의 일부분 선택해 새로운 배열 만드는 속성
 
-### setTimeout 
+### setTimeout
+
 함수나 지정된 코드를 실행하는 타이머를 설정 – 재귀함수 만들기
 
 ### innerHTML
+
 html문서에 출력
-
-
-
-
