--- a/_posts/2020-02-22-CSS의 단위 02.md
+++ b/_posts/2020-02-22-CSS의 단위 02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "CSS 단위 02 (vw/vh)"
+title: "CSS_단위 02 (vw/vh)"
 description:
 headline:
 modified: 2020-02-22
@@ -19,6 +19,7 @@ featured: true
 vw와 vh 에서의 v는 viewport를 뜻하는데,  
 <span class="orange">viewport 란 전체 웹페이지 가운데 브라우저 창에 보이는 영역을 말합니다.</span>  
 뷰포트는 웹페이지가 사용자에게 보여지는 영역을 말합니다. 데스크탑 PC에서 브라우저의 크기를 줄이면 웹페이지의 내용이 다보여지지 않고 스크롤 해서 봐야 되는 경우가 있습니다. 이때도 브라우저에 보여지는 부분이 뷰포트입니다. 데스크탑 PC는 브라우저의 크기를 바꿔서 뷰포트의 크기를 바꿀 수 있는 것입니다.
+
 <div class="code">
 <iframe width="100%" height="100" src="//jsfiddle.net/lsh58/xctgzkvr/embedded/html/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 </div>
@@ -31,9 +32,10 @@ vw와 vh 에서의 v는 viewport를 뜻하는데,
 <span class="gray">initial-scale</span>: 페이지가 처음 로딩될 때 줌 레벨을 조정합니다. 값이 1일때는 CSS 픽셀과 기기종속적인 픽셀 간의 1:1 관계를 형성합니다.  
 <span class="gray">minimum-scale</span>: viewport의 최소 배율값, 기본값은 0.25입니다.  
 <span class="gray">maximum-scale</span>: viewport의 최대 배율값, 기본값은 1.6입니다.  
-<span class="gray">user-scalable</span>: 사용자의 확대/축소 기능을 설정, 기본값은 yes입니다.  
+<span class="gray">user-scalable</span>: 사용자의 확대/축소 기능을 설정, 기본값은 yes입니다.
 
 ### 2. 정의된 속성 값
+
 <span class="gray">device-width</span>: 기기의 가로 넓이 픽셀 값 (웹페이지의 가로(width) 값은 기기가 사용하는 가로 넓이 값(device-width) 만큼 적용하여 사용하라는 의미)  
 <span class="gray">device-height</span>: 기기의 세로 높이 픽셀 값
 
@@ -42,31 +44,35 @@ vw와 vh 에서의 v는 viewport를 뜻하는데,
 content 보다 작은 viewport width/height를 설정하면 무시됩니다.  
 viewport에서 initial-scale을 설정하지 않고 width/height를 설정하면 전체 화면이 표시됩니다.  
 viewport에서 initial-scale도 width/height를 설정하지 않으면 width=980px/height=1091px 이 됩니다.  
-표시 영역과 contents의 크기가 일치하지 않을때 initial-scale을 설정하면 의도하지 않은 layout이 발생합니다.  
+표시 영역과 contents의 크기가 일치하지 않을때 initial-scale을 설정하면 의도하지 않은 layout이 발생합니다.
 
 # vw / vh / vmin / vmax
 
 ### 1. vw(viewport width)
+
 vw단위는 <span class="orange">웹 브라우저의 가로폭 (너비)를 기준으로 결정되는 크기</span>입니다.  
 만약 웹 브라우저의 너비가 1280이고, 폰트 크기를 10vw라고 한다면  
-이 때 10vw의 크기는 1280의 1%인 12.8px이 되는 것입니다.  
+이 때 10vw의 크기는 1280의 1%인 12.8px이 되는 것입니다.
 
 ### 2. vh(viewport height)
+
 vh단위는 <span class="orange">웹 브라우저의 세로폭 (높이)를 기준으로 결정되는 크기</span>입니다.  
 만약 웹 브라우저의 높이가 600이고, 폰트 크기를 10vh라고 한다면  
-이 때 10vh의 크기는 600의 1%인 6px이 되는 것입니다.  
+이 때 10vh의 크기는 600의 1%인 6px이 되는 것입니다.
 
 ### 3. vmin (viewport minimum), vmax (viewport maximum)
+
 vmin 은 <span class="orange">웹브라우저 너비와 높이 중에 더 작은 값을 기준으로 하여 100분의 1 한 값</span>.  
 vmax 는 <span class="orange">웹브라우저 너비와 높이 중에 더 큰 값을 기준으로 하여 100분의 1한 값</span>.
 
-브라우저 너비가 960px , 높이가 1200px 이라면   
+브라우저 너비가 960px , 높이가 1200px 이라면  
 ----> 1vmin = 9.6px(960/100) , 1vmax = 12px(1200/100) 입니다.
 
 ### 4. %와의 차이점
+
 %를 사용하여 body의 크기 100%로 설정한 경우, 스크롤바가 발생하지 않지만,  
 vw와 vh의 경우에는 viewport가 스크롤바의 영역을 포함하기 때문에, 스크롤바가 생깁니다.
 
 <br>
 
-Reference : [Rucy 의 개발 공부 블로그](https://beyou0123.tistory.com/20)  /  [https://ccuram.tistory.com/](https://ccuram.tistory.com/28)
+Reference : [Rucy 의 개발 공부 블로그](https://beyou0123.tistory.com/20) / [https://ccuram.tistory.com/](https://ccuram.tistory.com/28)
