--- a/_posts/2020-03-15-JS30_01_Drum kit.md
+++ b/_posts/2020-03-15-JS30_01_Drum kit.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "JS30-Drum kit"
+title: "JS30_01_Drum kit"
 description:
 headline:
-modified: 2020-03-16
+modified: 2020-03-15
 category: webdevelopment
 tags: [JS30]
 imagefeature:
