--- a/_posts/2020-05-16-SCSS.md
+++ b/_posts/2020-05-16-SCSS.md
@@ -136,6 +136,5 @@ $input-wrap-height: 100px / 50px * 20%;
 임의 함수 지정해 사용할 수 있다. @return을 통해 값을 반환한다. 자주 사용하는 것은 함수를 만들어 사용하길 추천!
 
 
-# CHEAT SHEET
-### https://devhints.io/sass
+전체적인 문법을 한눈에 보는 치트시트 사이트 [치트시트](https://devhints.io/sass)
 
